--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mssql": "^12.2.0",
     "mysql2": "^3.17.2",
     "next": "16.1.6",
+    "pino": "^10.3.1",
+    "pino-pretty": "^13.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sweetalert2": "^11.26.18"
